--- a/experiments/cfgs/res101.yml
+++ b/experiments/cfgs/res101.yml
@@ -3,7 +3,7 @@ TRAIN:
   HAS_RPN: True
   IMS_PER_BATCH: 1
   BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
-  RPN_POSITIVE_OVERLAP: 0.7
+  RPN_POSITIVE_OVERLAP: 0.7 # 原始0.7
   RPN_BATCHSIZE: 256
   PROPOSAL_METHOD: gt
   BG_THRESH_LO: 0.0
